test/syntax/valid/06_import_single.sg
// Single import declaration.
import io

io.print("ok")
