test/syntax/errors/07_unclosed_paren.sg
// expect-error: parse error
// Missing closing parenthesis.
import io

io.print("hello"
